WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302958
[GTK] Fix the unused variable warning without ENABLE_FULLSCREEN_API
https://bugs.webkit.org/show_bug.cgi?id=302958
Summary
[GTK] Fix the unused variable warning without ENABLE_FULLSCREEN_API
Sebastian Krzyszkowiak
Reported
2025-11-21 09:26:51 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sebastian Krzyszkowiak
Comment 1
2025-11-21 09:28:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54330
EWS
Comment 2
2025-11-21 10:18:55 PST
Committed
303401@main
(558107c6b962): <
https://commits.webkit.org/303401@main
> Reviewed commits have been landed. Closing PR #54330 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug