[GTK] Fix the unused variable warning without ENABLE_FULLSCREEN_API https://bugs.webkit.org/show_bug.cgi?id=302958

Reviewed by Michael Catanzaro.

* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseToplevelWindowStateChanged):

Canonical link: https://commits.webkit.org/303401@main